[feat] 구글 로그인 후 사용자 이름/이메일/프로필 사진 가져오기
- 구글 로그인 후 사용자 이름/이메일/프로필 사진을 가져옴
- 프로필 사진은 변경한 것이 바로 반영되지 않는 듯 해서 확인 필요함

#5

--- a/BE/src/main/resources/templates/index.html
+++ b/BE/src/main/resources/templates/index.html
@@ -10,6 +10,8 @@
 <body>
 <h1>Welcome to the Index Page</h1>
 <p th:if="${userName}" th:text="'Hello, ' + ${userName} + '!'"></p>
+<p th:if="${userEmail}" th:text="'Hello, ' + ${userEmail} + '!'"></p>
+<img th:if="${userPicture}" th:src="${userPicture}" alt="Profile Picture">
 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
 </body>
 </html>
