--- a/BE/src/main/resources/templates/index.html
+++ b/BE/src/main/resources/templates/index.html
@@ -1,4 +1,3 @@
-<!-- src/main/resources/templates/index.html -->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -10,6 +9,8 @@
 <body>
 <h1>Welcome to the Index Page</h1>
 <p th:if="${userName}" th:text="'Hello, ' + ${userName} + '!'"></p>
+<p th:if="${userEmail}" th:text="'Hello, ' + ${userEmail} + '!'"></p>
+<img th:if="${userPicture}" th:src="${userPicture}" alt="Profile Picture">
 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
 </body>
 </html>
